# lacunalabels

./: LICENSE.md  README.md  README.qmd  _quarto.yml  index.qmd  lacunalabels.Rproj  pyproject.toml
docs/manuscript/: analytics.qmd  manuscript.qmd  references.bib
docs/manuscript/data/: risk_stats_df.rda
docs/report/: technical-report.qmd
notebooks/: references.bib
notebooks/image-processing/: chipping.ipynb  image-chips.ipynb  label-chips.ipynb  make-labels.ipynb
notebooks/label-assessment/: analyze-assignments.qmd  expert-reviews.html  expert-reviews.qmd  prepare-labels.html
notebooks/label-processing/: analyze-assignments.html  analyze-assignments.qmd  prepare-assignment-catalog.qmd  prepare-fields.qmd  references.bib
notebooks/makelabels/: image-chips.ipynb  label-chips.ipynb
notebooks/preprocessing/: analyze-assignments.html  analyze-assignments.qmd  expert-reviews.html  expert-reviews.qmd  prepare-assignment-catalog.html  prepare-assignment-catalog.qmd  prepare-fields.html  prepare-fields.qmd  references.bib
notebooks/report/: technical-report.qmd
src/makelabels/: __init__.py  makelabels.py  utils.py
